fix display, border and transition on question wrapp

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,10 +121,16 @@ select {
     margin-bottom: 20px;
 }
 .question-wrapper .answer-wrapper .answer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     color: #c4c4c4;
     width: 100%;
     height: 60px;
     padding: 20px;
     border-radius: 10px;
     border: 3px solid #c0b4b4;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: 0.3s linear;
 }
